final corrections benni

--- a/about.tex
+++ b/about.tex
@@ -1,3 +1,3 @@
 \chapter{Motivation}
 
-Nowadays our world becomes more and more digital, which has some nice side effects. It is a lot easier to develop digital circuits than analog ones, as the signals do not depend that much on the exact voltage levels. Something above the half of the source voltage can be interpreted as high, and something below as low. In the analog world everything is a lot more complex, even small changes can result in big problems and faulty chips. But why should somebody still develop analog circuits, if it is that difficult? The problem is, that we live in an analog world. Therefore the connection to the outside of a chip will always be analog, and if it only contains of some amplifiers. For the digital parts of electronic designs already tools exist, which automatically create a layout from example given the schematic. For analog circuits exist analog placers, as there are also routing algorithms available. But now it is time to combine these parts together, so that the process to get a layout out of a schematic can be automatized as far as possible.
+Nowadays our world becomes more and more digital, which has some positive side effects. It is a lot easier to develop digital circuits than analog ones, as the signals do not depend that much on the exact voltage levels. More than half of the source voltage can be interpreted as high and the rest can be interpreted as low. In the analog world everything is a lot more complex, even small changes can result in huge problems and faulty chips. But why should somebody still develop analog circuits, if it is that difficult? The problem is that we live in an analog world. Therefore the connection to the outside of a chip will always be analog and if it only contains of some amplifiers. For the digital parts of electronic designs, tools already exist, which automatically create a layout from example given the schematic. For analog circuits analog placers exist, as there are also routing algorithms available. But now it is time to combine these parts, so that the process to get a layout out of a schematic can be automatized as far as possible.
