--- a/routing.tex
+++ b/routing.tex
@@ -1,6 +1,6 @@
 \chapter{Routing}
 
-Even nowadays the routing is often done manually for analog circuits. This is mainly caused by a lack of good tools and, consequently, the missing trust of engineers in them. The engineers consider a lot of different constraints during the routing, for example symmetries, net lengths and capacitive couplings. All these things have a major impact on the performance of the circuit, as it is very important in the analog world to have an accurate signal level because a division into high or low is not enough.
+Even nowadays the routing is often done manually for analog circuits. This is mainly caused by a lack of good tools and, consequently, the missing trust of engineers in them. The engineers consider a lot of different constraints during the routing, for example symmetries, net lengths and capacitive couplings. All these factors have a major impact on the performance of the circuit, as it is very important in the analog world to have an accurate signal level because a division into high or low is not enough.
 
 Additionally, the designer adds guards and rings to the placement to protect certain devices from noise. This noise can come, for instance, from the clock net or other routes, which carry a signal with high frequency. But high frequencies are not the only disturbing effects: During the placement, the designer has to consider temperature gradients, caused by transistors with a high power consumption. To avoid problems with different temperatures in the substrate of, for example, the devices of a differential pair they can be placed symmetrically or can even have a common centroid. Around these grouped modules the designer then can create a guard ring to protect the devices even more. An example for a manually routed layout can be seen in \figref{fig:miller_amplifier_routed_layout}.
 
@@ -26,9 +26,9 @@ First of all, to actually route the placements some data was missing in Plantage
 \item guard rings
 \end{itemize}
 
-In awareness of the necessary routing for every module a bigger area was defined for the placement. The additional space between the modules could then be used to route the placement. Unfortunately, the information about the actual dimension of the modules was lost through this step. Therefore, I withdrew these changes and added the possibility to define a minimum distance between all modules.
+In awareness of the necessary routing for every module a bigger area was defined for the placement. The additional space between the modules could then be used to route the placement. Unfortunately, the information on the actual dimension of the modules was lost through this step. Therefore, I withdrew these changes and added the possibility to define a minimum distance between all modules.
 
-The technology rules are passed through by the ICFBInterface to Plantage. At least for the technology definitions of Austria Microsystems it is not necessary to convert these rules, as the same format is chosen. For other manufacturers a conversion might be necessary.
+The technology rules are passed through to Plantage by the ICFBInterface. At least for the technology definitions of Austria Microsystems it is not necessary to convert these rules, as the same format is chosen. For other manufacturers a conversion might be necessary.
 
 Previously, the vias and routes were not considered at all. The main information which is needed to route are the dimension of the vias on the different layers and the width for the routes. Actually, there is no real width for a route, but a minimal width, which a route must have. Usually this width is used for the connections. Also, the dimensions for the via must be calculated \neweqref{eq:via_dimension}, while the generated routes and placed vias needed to be added to the output of Plantage, so that they can be shown in the GUI.
 
@@ -44,7 +44,7 @@ The GUI-part of this application also needed some adaptions. This work was mainl
 \end{itemize}	
 
 \section{Overview of Routing Algorithms}
-A really nice overview of the existing routing algorithms and the different approaches can be found in \cite[page 149 till 201]{springer:eda_analog_routing}. The more sophisticated routing algorithms described there are based on two basic algorithms:
+An interesting overview of the existing routing algorithms and the different approaches can be found in \cite[page 149 till 201]{springer:eda_analog_routing}. The more sophisticated routing algorithms described there are based on two basic algorithms:
 \begin{itemize}
 \item Maze Router
 \item Line Router
@@ -53,7 +53,7 @@ These algorithms are so-called general purpose router, they can be used for glob
 
 \subsection{Basic Routing Algorithms}
 \subsubsection{Maze Router}
-Another often used name for algorithm is Lee's algorithm. But whatever the name is, it is based on a grid, where the obstacles and pins can be filled in. Basically, this is the entire information, which is necessary for the router. Afterwards, a wave of numbers is started from one pin and if this wave reaches the target a possible routing is found \figref{fig:maze_router}. The router guarantees the shortest possible route and will find a solution in all cases, if it is possible \cite[p. 693]{kaufmann:electronic_design_automation}. All in all, this is a very simple approach, but it has several drawbacks. First of all, it is quite slow and very memory-consuming \cite[p. 693]{kaufmann:electronic_design_automation}, as a big matrix might be necessary. This memory-consumption also heavily relies on the grid size, which raises the next question: How fine should the grid be? Those are problems which can be solved. So, for example to attack the problem with the performance it is possible to transform the algorithm into the A*-Algorithm, which is actually just a modified maze router that prefers the shorter directions to the target. Also, for the other problems there are solutions which are mainly part of the more sophisticated routing algorithms.
+Another name for an algorithm, which is often used, is Lee's algorithm. But whatever the name is, it is based on a grid, where the obstacles and pins can be filled in. Basically, this is the entire information, which is necessary for the router. Afterwards, a wave of numbers is started from one pin and if this wave reaches the target a possible routing is found \figref{fig:maze_router}. The router guarantees the shortest possible route and will find a solution in all cases, if it is possible \cite[p. 693]{kaufmann:electronic_design_automation}. All in all, this is a very simple approach, but it has several drawbacks. First of all, it is quite slow and very memory-consuming \cite[p. 693]{kaufmann:electronic_design_automation}, as a big matrix might be necessary. This memory-consumption also heavily relies on the grid size, which raises the next question: How fine should the grid be? Those are problems which can be solved. So, for example, to attack the problem with the performance it is possible to transform the algorithm into an A*-Algorithm, which is actually just a modified maze router that prefers the shorter directions to the target. Also, for the other problems there are solutions which are mainly part of the more sophisticated routing algorithms.
 
 \begin{figure}
 	\centering
@@ -70,7 +70,7 @@ The main difference of a line router to a maze router is the usage of lines as p
 The algorithms above only considered two-pin nets, but very often nets have more than two pins. For these cases a possible solution would be to consider only two pins at a time and connect the others sequentially to the previous ones. This can result in a worse outcome than the optimum \cite[p. 701]{kaufmann:electronic_design_automation}. A better approach is to use a Steiner-tree \cite[page 153]{springer:eda_analog_routing}.
 
 \subsection{Sophisticated Routing Algorithms}
-As it is not the topic of this thesis to describe in detail every possible routing algorithm I just want to explain some possible approaches. They are built around several interesting ideas but all have at least one drawback, which made them not useful for the hierarchical placer, or they were too complex to be easily implemented. As the target of this thesis is mainly to create feasible and useful, but not perfect, layouts, I have not chosen one of these sophisticated algorithms.
+As it is not the topic of this thesis to describe every possible routing algorithm  in detail, as I only want to explain some possible approaches. They are built around several interesting ideas but all have at least one drawback, which made them not useful for the hierarchical placer, or they were too complex to be easily implemented. As the target of this thesis is mainly to create feasible and useful, but not perfect, layouts, I have not chosen one of these sophisticated algorithms.
 \begin{itemize}
 \item ROSA \cite[page 165]{springer:eda_analog_routing}
 \item MIGHTY \cite[page 166]{springer:eda_analog_routing}
@@ -89,14 +89,14 @@ As it is not the topic of this thesis to describe in detail every possible routi
 \end{itemize}
 
 \subsection{Routing algorithms integrated into the placer}
-It could be a good idea to try to integrate the routing into the placer. Possible approaches into this direction are KOAN \cite[page 178]{springer:eda_analog_routing}, RACHANA \cite[page 178]{springer:eda_analog_routing}, GELSA \cite[page 179]{springer:eda_analog_routing}, and several others. The major problem with these solutions is the big modification of the placer. Actually, it is useless to try to integrate the routing algorithm this way into a placer after it was developed, as it must be created for this case especially with the routing in mind from the beginning on. As the placer in Plantage was not supposed to include the routing algorithm, I had to use a different approach.
+It could be a good idea to try to integrate the routing into the placer. Possible approaches into this direction are KOAN \cite[page 178]{springer:eda_analog_routing}, RACHANA \cite[page 178]{springer:eda_analog_routing}, GELSA \cite[page 179]{springer:eda_analog_routing}, and several others. The major problem with these solutions is the big modification of the placer. Actually, it is useless to try to integrate the routing algorithm this way into a placer after it was developed, as it must be created for this case especially with the routing in mind, from the beginning on. As the placer in Plantage was not supposed to include the routing algorithm, I had to use a different approach.
 
 \subsection{Template Based Algorithms}
 Template based algorithms do not start from scratch, they already have a possible layout for a slightly different circuit or technology. Such a solution can be used in several cases and it gives the layout designer nearly full control over the process. In my case I have to assume that there is no such template available and the intention of the whole set of tools would be that the user has to provide as little information as possible. This would really mean \textit{electronic design \textbf{automation}} and therefore should be the real target.
 
 \section{Implemented Routing Algorithms}
 \label{sec:implemented_algorithms}
-The first decision I had to make was to decide which algorithms should be implemented. The more sophisticated solutions and all global and detailed approaches seemed a bit to complex to implement them properly in only a few weeks. So the real choice was to use something based on a maze or a line router. As the line routers seemed to be a good trade-off between complexity and performance I have chosen something based on them. In the end I have implemented three different routing algorithms: first of all, a typical line expansion router. This solution does not consider all constraints but it is able to create at least reasonable results. Afterwards, I extended this algorithm in order to consider additional constraints. To improve the performance I also implemented a very special version of the line expansion router, which really only creates feasible but not very useful routings. This router can be used for the pre-routing, where the results are not stored anyway.
+The first decision I had to make was to decide which algorithms should be implemented. The more sophisticated solutions and all global and detailed approaches seemed a bit to complex to implement them properly in only a few weeks. So the real choice was to use something based on a maze or a line router. As the line routers seemed to be a good trade-off between complexity and performance I have chosen something based on them. In the end I have implemented three different routing algorithms: first of all, a typical line expansion router. This solution does not consider all constraints but it is able to create at least reasonable results. After that, I extended this algorithm in order to consider additional constraints. To improve the performance I also implemented a very special version of the line expansion router, which really only creates feasible but not very useful routings. This router can be used for the pre-routing, where the results are not stored anyway.
 
 \subsection{Line Expansion Router}
 
@@ -112,9 +112,9 @@ For two rectangles there are several possible constellations. For the first poss
 	\label{fig:rectangles_overlapping}
 \end{figure}
 
-If the two rectangles do not overlap it becomes more difficult. In this case I can at least say that one of the rectangles has its closest point at one of the edges. Actually, there even can be an endless count of solutions for this problem, but I am only interested in one of them. Because of this I select the solution that is the easiest to calculate, which means the selection of a corner for one rectangle. The closest corner from the first rectangle to the second one is one that has the closest euclidean distance to the center of gravity of the second one \figref{fig:rectangles_closest_corner}. As the closest point of the first rectangle is now known, I can start to select the closest point on the second one. This point must be obviously on one of the edges. Every edge is basically a line segment, where the closest point can be calculated easily. For this task I, firstly, need to expand the line segment into a whole line. Secondly, I can then turn this line 90 degrees (it does not matter in which direction as it is a line) and move this new line, so that it crosses the point, from which I want to know the closest point on the line segment. The crossing point of these two lines, if it is also inside the line segment, is the closest point. If this crossing point is outside the line segment, the closest point must be the start or end point of the line segment, which are actually the rectangle's corners.
+If the two rectangles do not overlap it becomes more difficult. In this case I can at least say that one of the rectangles has its closest point at one of the edges. Actually, there can even be an endless count of solutions for this problem, but I am only interested in one of them. Because of this I select the solution that is the easiest to calculate, which means the selection of a corner for one rectangle. The closest corner from the first rectangle to the second one is one that has the closest euclidean distance to the center of gravity of the second one \figref{fig:rectangles_closest_corner}. As the closest point of the first rectangle is now known, I can start to select the closest point on the second one. This point must be obviously on one of the edges again. Every edge is basically a line segment, where the closest point can be calculated easily. For this task I, firstly, need to expand the line segment into a whole line. Secondly, I can then turn this line 90 degrees (it does not matter in which direction as it is a line) and move this new line, so that it crosses the point, from which I want to know the closest point on the line segment. The crossing point of these two lines, if it is also inside the line segment, is the closest point. If this crossing point is outside the line segment, the closest point must be the start or end point of the line segment, which are actually the rectangle's corners.
 
-The task of the selection is at this point not finished, because in special cases it is possible that I can now find again a closer point on the first rectangle to the second one. So I have to do the last step once again, for the last time, but with the point of the second rectangle as source.
+The task of the selection is at this point not finished, because in special cases it is possible that I can now again find a closer point on the first rectangle to the second one. So I have to do the last step once again, for one last time, but with the point of the second rectangle as source.
 
 \begin{figure}
 	\centering
@@ -123,14 +123,14 @@ The task of the selection is at this point not finished, because in special case
 	\label{fig:rectangles_closest_corner}
 \end{figure}
 
-A very similar step to this one is done for every step, the selection of a new target. This may be useful, as a different target area can be now closer than previously, mostly if the last step went into a bad direction. The task in this case is to find the closest rectangle to the current point and, afterwards, the closest point on this rectangle.
+A very similar procedure to this one is done for every step - the selection of a new target. This may be useful, as a different target area can be now closer than previously, mostly if the last step went into a bad direction. The task in this case is to find the closest rectangle to the current point and, afterwards, the closest point on this rectangle.
 
 \subsubsection{Consider Obstacles}
-After the algorithm has selected start and target contact areas the next step is to avoid routes across modules. For this purpose during all the following steps the modules are considered as obstacles. But during the first step usually the route has to get out of the module first. To avoid additional, accidentally added, gates the algorithm has to choose the shortest way to get out of the module. To avoid problems with the design rules it is not possible to start right at the contact area to the next layer and use, for example, metal to get out of the module as fast as possible.
+After the algorithm has selected start and target contact areas the next step is to avoid routes across modules. For this purpose during all the following steps the modules are considered as obstacles. But during the first step usually the route has to get out of the module first. To avoid additional, accidentally added gates the algorithm has to choose the shortest way to get out of the module. To avoid problems with the design rules it is not possible to start right at the contact area to the next layer and use, for example, metal to get out of the module as fast as possible.
 
-As the algorithm now has all the necessary information the actual line expansion routing can start. The main idea behind a line expansion router is that the routes are created sequentially. Every single step is based on a map of obstacles, which the route must not cross. Beginning from the starting point I always calculate the next possible point of a route and apply the same algorithm afterwards again to this partial problem. At the beginning of this recursive algorithm, as usual, I check the terminating condition, if I have reached the target point.
+As the algorithm now has all the necessary information, the actual line expansion routing can start. The main idea behind a line expansion router is that the routes are created sequentially. Every single step is based on a map of obstacles, which the route must not cross. Beginning from the starting point I always calculate the next possible point of a route and afterwards apply the same algorithm again to this partial problem. At the beginning of this recursive algorithm, as usual, I check the terminating condition whether I have reached the target point.
 
-In every single step I have to make several decisions: First, I group the possible directions in good and bad directions \figref{fig:router_good_bad_direction}. Good directions are those, which reduce the distance to the target, whereas bad ones are all the others.
+In every single step I have to make several decisions: First, I group the possible directions in good and bad directions \figref{fig:router_good_bad_direction}. Good directions are those which reduce the distance to the target, whereas bad ones are all the others.
 
 \begin{figure}
 	\centering
@@ -169,13 +169,13 @@ Sometimes it is also necessary to go above an obstacle, which is on a layer belo
 
 Last but no least, it is also possible to switch to the neighboured layers. For modules the obstacle cannot be crossed this way, as they are obstacles at every layer. But if for example the obstacle is just another route a layer switch may solve the problem. In such cases it is even reasonable to force a layer switch when it is currently not possible, because for instance another route is too close. In this case I try to make one small step, which is just big enough to fulfill all design rules (especially the notch rule) and switch the layer at this new point.
 
-All this possibilities to find a way to the target must combined clever, otherwise the performance becomes very bad. Therefore it makes sense to, for instance, prefer the steps into good directions. I choose the bad directions only if the shortest possible connection with only steps into good directions at the current point is bigger than 10\% of the Manhattan distance to the target. This ensures that too long routes can be avoided and still results are created fast enough.
+All these possibilities to find a way to the target must be combined in a clever way otherwise the performance would become unsufficient. Therefore it makes sense to, for instance, prefer the steps into good directions. I choose the bad directions only if the shortest possible connection with only steps into good directions at the current point was bigger than 10\% of the Manhattan distance to the target. This ensures that routes that are too long can be avoided and still, results are created fast enough.
 
 \subsubsection{Avoid Collisions}
-To avoid collisions I take the preferred directions for every layer into account. This information is again stored in the technology file and describes if a layer should be used for horizontal or vertical routes. This reduces the possibility of collisions very efficiently and results in less complex layouts. Last but not least it also improves the performance of the router significantly.
+To avoid collisions I take the preferred directions for every layer into account. This information is again stored in the technology file and describes if a layer should be used for horizontal or vertical routes. This reduces the possibility of collisions very efficiently and results in less complex layouts. Last but not least, it also improves the performance of the router significantly.
 
 \subsubsection{Symmetric Routes}
-In manually created layouts an usual way to route symmetric elements is to create them optically symmetric. This optical symmetry gives the designer an easy way to create symmetry. But the really important part about routing symmetries is to match the parasitics. The resistance of the route is for sure matched for the symmetric routes through an optical symmetry, but the capacitive couplings are obeyed in most cases. Therefore, I concentrated on the resistance. To also consider the capacitance it would have been necessary to create all routes at the same time. Only with such an approach I can evaluate the capacitive parasitics, otherwise I would have never known what influence routes that were created afterwards will have. As I have chosen to create the routes one by one I cannot consider the capacitance for the symmetries.
+In manually created layouts an usual way to route symmetric elements is to create them optically symmetric. This optical symmetry gives the designer an easy way to create symmetry. But the really important part about routing symmetries is to match the parasitics. The resistance of the route is certainly matched for the symmetric routes through an optical symmetry, but the capacitive couplings are obeyed in most cases. Therefore, I concentrated on the resistance. To also consider the capacitance it would have been necessary to create all routes at the same time. Only with such an approach I can evaluate the capacitive parasitics, otherwise I would have never known what influence routes that were created afterwards would have. As I have chosen to create the routes one by one I cannot consider the capacitance for the symmetries.
 
 But before I go more into detail of the routing itself I want to further explain the situation. Symmetries are caused by symmetry constraints, which can have, as already described earlier \secref{subsec:symmetry_constraint}, single and pair modules. Single modules are quite useless for a symmetric routing. The only modules of interest are pair modules, no matter if they only must be connected together or also to another module.
 
@@ -221,7 +221,7 @@ In this special case I had to implement the routing into the hierarchical placin
 This is the point where the line expansion feasibility router comes into play. This algorithm is a modified version of the basic line expansion algorithm. The only difference is the amount of possible routes, which is created for every necessary connection. The basic version creates as many solutions as possible, whereas the modified version only creates one route. This will result in usually quite bad layouts and because of this the router should not be used for the final step. But as pre-router the algorithm can be useful, as it is very fast and can select very efficiently if a placement is at least feasible to route for a line expansion router.
 
 \subsection{Extended Line Expansion Router}
-This extended version of the line expansion router is based on the simple version. So it is again a sequential approach with the same drawbacks and advantages as the previous versions. The main difference to it is how I select the routes. I actually create the routes in the same way as for the previous version. To improve the performance I make a pre-selection based on the resistance, which can be done easily, as the routes are already sorted by there resistance. For all the routes, which are then left, I calculate the total edge- and area-capacitance that would turn out if this route is added to the connections of the previously routed nets. I then combine these values together to the parasitic sum
+This extended version of the line expansion router is based on the simple version. So it is again a sequential approach with the same drawbacks and advantages as the previous versions. The main difference to it is how I select the routes. I actually create the routes in the same way as for the previous version. To improve the performance I make a pre-selection based on the resistance, which can be done easily, as the routes are already sorted by their resistance. For all the routes, which are left then, I calculate the total edge- and area-capacitance that would turn out if this route is added to the connections of the previously routed nets. I then combine these values together to the parasitic sum
 \begin{equation}
 	\label{eq:extended_line_expansion_objective}
 	p = w_R \cdot R + w_{C_a} \cdot C_a + w_{C_e} \cdot C_e
